hard-gists/507bcbf3e8cfdc5d3549/run.log
=== Docker Run Log for 507bcbf3e8cfdc5d3549 ===
Started at: Mi 29. Okt 15:21:16 CET 2025

[2025-10-29 15:21:16] START: Running container for 507bcbf3e8cfdc5d3549
[2025-10-29 15:21:16] SUCCESS: Container 858550d32928d6a06f9039a8b39f48988bd12fafdf7d1e36d73f33ce92603d09 started for 507bcbf3e8cfdc5d3549
=== Container logs for 507bcbf3e8cfdc5d3549 ===
  File "/snippet.py", line 15
    print "input filename is",dbfilename
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 507bcbf3e8cfdc5d3549 ===
[2025-10-29 15:21:18] INFO: Container 858550d32928d6a06f9039a8b39f48988bd12fafdf7d1e36d73f33ce92603d09 has stopped
